2013-09-21 Roy Hills <Roy.Hills@nta-monitor.com>

	* get-oui, get-iab: Use LWP::UserAgent instead of LWP::Simple to enable
	  us to obtain the raw content rather than the decoded content. This
	  avoids Unicode/UTF-8 issues caused by a change in behaviour between
	  LWP 5.813 on Debian Lenny and 5.836 on Debian Squeeze.

	* ieee-oui.txt, ieee-iab.txt: Updated from IEEE website using modified
	  scripts.

2013-09-05 Roy Hills <Roy.Hills@nta-monitor.com>

	* arp-fingerprint: Added fingerprint for WIZnet W5100 on Arduino
	  Ethernet shield.

2013-09-05 Roy Hills <Roy.Hills@nta-monitor.com>

	* configure.ac: Change the bug-report string in AC_INIT from the
	  arp-scan email address to the github URL.

	* Added references to the github repository in various files in
	  place of the arp-scan email address.

	* Updated ieee-oui.txt and ieee-iab.txt files.

2013-08-15 Roy Hills <Roy.Hills@nta-monitor.com>

	* Removed $Id$ keywords from all files, and associated rcsid variables
	  from C source. These are not really needed and they don't work with
	  git.

	* check-run1: Added GPL licence text, which had been accidentally
	  ommitted when the script was written.

	* configure.ac: Incremented version to 1.9.2 to distinguish new
	  version under git revision control.

	* .gitignore: new file containing file patterns that should not be
	  committed to the repository.

2013-08-15 Roy Hills <Roy.Hills@nta-monitor.com>

	* ChangeLog: Removed pointless id keywords.

	* Final SVN revision before migration to git.

2013-07-25 Roy Hills <Roy.Hills@nta-monitor.com>

	* Released arp-scan version 1.9.
	  tarball arp-scan-1.9.tar.gz, size 488442 bytes
	  md5sum 38584d6c1edfa9f6b41d496e4a5539f1

	* configure.ac: Incremented version to 1.9.1.

2013-07-24 Roy Hills <Roy.Hills@nta-monitor.com>

	* ieee-oui.txt, ieee-iab.txt: Updated IEEE OUI and IAB listings from
	  IEEE website using get-oui and get-iab Perl scripts.

	* configure.ac: Incremented version number to 1.9.
